--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
@@ -12,8 +12,10 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Clamp-support</h1>
-      <h2 class="project-tagline"></h2>
-      <a href="https://github.com/UTHealth-CCB/clamp-support" class="btn">View on GitHub</a>     
+      <h2 class="project-tagline">CLAMP</h2>
+      <a href="https://github.com/UTHealth-CCB/clamp-support" class="btn">View on GitHub</a>
+      <a href="https://github.com/UTHealth-CCB/clamp-support/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/UTHealth-CCB/clamp-support/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
