--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <a id="technical-support" class="anchor" href="#technical-support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Support</h3>
 
 <p>For technical support, please contact Jingqi Wang (<a href="https://github.com/jingqihit" class="user-mention">@jingqihit</a>) at <a href="mailto:jingqi.wang@uth.tmc.edu">jingqi.wang@uth.tmc.edu</a>. For for general inquiry please contact Anupama E. Gururaj (<a href="https://github.com/aegururaj" class="user-mention">@aegururaj</a>) at <a href="mailto:Anupama.E.Gururaj@uth.tmc.edu">Anupama.E.Gururaj@uth.tmc.edu</a>.</p>
-
+ </section>
+      <section class="page-header">
       <footer class="site-footer">
         <div class="visible-xs visible-sm text-center" style="margin-bottom: 20px;">
                     <img src="SBMI-logo.png" alt="UTHealth Logo" />
