--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
     <section class="main-content">
       <h3>
-<a id="clinical-language-annotation-modeling-and-processing-toolkit" class="anchor" href="#clinical-language-annotation-modeling-and-processing-toolkit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Clinical Language Annotation, Modeling and Processing Toolkit</h3>
+<a id="clinical-language-annotation-modeling-and-processing-toolkit" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Clinical Language Annotation, Modeling and Processing Toolkit</h3>
 
 <p>CLAMP is a comprehensive clinical Natural Language Processing software that enables recognition and automatic encoding of clinical information in narrative patient reports. In addition to running clinical concept extraction as well as annotation pipelines, the individual components of the system can also be used as independent modules. The system lends itself for diverse applications in a broad range of clinical domains. </p>
 
 <h3>
-<a id="about-us" class="anchor" href="#about-us" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Us</h3>
+<a id="about-us" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Us</h3>
 
 <p>The CLAMP is a natural language processing tool, based on several award-winning methods and applications developed in University of Texas Health Science Center at Houston, School of Biomedical Informatics. </p>
 
 <h3>
-<a id="clamp-features" class="anchor" href="#clamp-features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CLAMP Features</h3>
+<a id="clamp-features" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CLAMP Features</h3>
 
 <ul>
 <li>High-performance NLP components</li>
@@ -40,7 +40,7 @@
 </ul>
 
 <h3>
-<a id="technical-support" class="anchor" href="#technical-support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Support</h3>
+<a id="technical-support" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Support</h3>
 
 <p>For technical support, please contact Jingqi Wang (<a href="https://github.com/jingqihit" class="user-mention">@jingqihit</a>) at <a href="mailto:jingqi.wang@uth.tmc.edu">jingqi.wang@uth.tmc.edu</a>. For for general inquiry please contact Anupama E. Gururaj (<a href="https://github.com/aegururaj" class="user-mention">@aegururaj</a>) at <a href="mailto:Anupama.E.Gururaj@uth.tmc.edu">Anupama.E.Gururaj@uth.tmc.edu</a>.</p>
  
