--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <div class="visible-xs visible-sm text-center" style="margin-bottom: 20px;">
-                    <img src="img/SBMI-logo.png" alt="UTHealth Logo" />
+                    <img src="SBMI-logo.png" alt="UTHealth Logo" />
                 </div>   
         <p class="copyright">CLAMP-Support maintained by <a href="https://github.com/UTHealth-CCB">UTHealth-CCB</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
