--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <div class="visible-xs visible-sm text-center" style="margin-bottom: 20px;">
+        <div class="visible-xs visible-sm text-center" style="margin-bottom: 20px; border:none">
                     <img src="SBMI-logo.png" alt="UTHealth Logo" />
                 </div>   
         <p class="copyright">CLAMP-Support maintained by <a href="https://github.com/UTHealth-CCB">UTHealth-CCB</a></p>
